--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,18 @@
     <!-- Reset all styles -->
     <link rel="stylesheet" href="./reset.css">
 
-    <!--  manifext.json
+    <!-- Add google fonts for this project -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500" rel="stylesheet">
+
+    <link rel="shortcut icon" href="./favicon.ico">
+
+    <!--  manifest.json
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
 
     <!-- Load fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:600|Work+Sans:300,500&amp;subset=latin-ext" rel="stylesheet">
